# ToDo

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingupdate.cpp  settingupdate.h
style/: res.qrc
style/qss/: new.qss  style.qss
